// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the product cards should render correctly when cardStyle is normal 1`] = `
<DocumentFragment>
  <div
    class="product-card"
    data-testid="product"
  >
    <img />
    <p />
    <p>
      MRP  /
    </p>
    <div
      data-testid="counter-div"
    >
      <button
        data-testid="decrement"
        type="button"
      >
        -
      </button>
      <button
        data-testid="increment"
        type="button"
      >
        +
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`the product cards should render correctly when cardStyle is sold-out 1`] = `
<DocumentFragment>
  <div
    class="product-card-sold-out"
    data-testid="product"
  >
    <img />
    <p />
    <p>
      MRP  /
    </p>
    <div
      data-testid="counter-div"
    >
      <button
        data-testid="decrement"
        type="button"
      >
        -
      </button>
      <button
        data-testid="increment"
        type="button"
      >
        +
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`the product component should render correctly when cardStyle is normal 1`] = `
<DocumentFragment>
  <div
    class="product-card"
    data-testid="product"
  >
    <img />
    <p />
    <p>
      MRP  /
    </p>
    <div
      data-testid="counter-div"
    >
      <button
        data-testid="decrement"
        type="button"
      >
        -
      </button>
      <button
        data-testid="increment"
        type="button"
      >
        +
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`the product component should render correctly when cardStyle is sold-out 1`] = `
<DocumentFragment>
  <div
    class="product-card-sold-out"
    data-testid="product"
  >
    <img />
    <p />
    <p>
      MRP  /
    </p>
    <div
      data-testid="counter-div"
    >
      <button
        data-testid="decrement"
        type="button"
      >
        -
      </button>
      <button
        data-testid="increment"
        type="button"
      >
        +
      </button>
    </div>
  </div>
</DocumentFragment>
`;
